# pyLSPproxy

./: Readme.md  pyproject.toml  runFlake8
pylspproxy/: Readme.md  communication.py  record.py  replay.py  simpleJsonRpc.py  simpleNDJson.py
scripts/: docWebServer  installEditablePyLSPProxyCommands
tests/: test_simpleJsonRpc.py  test_simpleNDJson.py  utils.py
